Added timer and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Toadally Awesome Trivia Game!</title>
     <!-- Added link for the reset-->
-    <!-- <link rel="stylesheet" href='./assets/css/reset.css'> -->
+    <link rel="stylesheet" href='./assets/css/reset.css'>
     <!-- Added link for the style-->
     <link rel="stylesheet" href='./assets/css/style.css'>
     <!-- Added link to the jQuery -->
@@ -17,10 +17,10 @@
 <body>
 
     <div class='name'>
-        <h1>
-            <bold> My Toadally Awesome Trivia Game! </bold>
-            <!--needs a colored box and white text-->
-        </h1>
+        <h5>My Toadally Awesome Trivia Game!</h5>
+        <p>
+            <bold><span id="timer"></span></bold>
+        </p>
 
         <div id="quiz"></div>
         <button id="submit">Get Results</button>
