Replaced the timer and the results

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Toadally Awesome Trivia Game!</title>
     <!-- Added link for the reset-->
-    <link rel="stylesheet" href='./assets/css/reset.css'>
+    <!-- <link rel="stylesheet" href='./assets/css/reset.css'> -->
     <!-- Added link for the style-->
     <link rel="stylesheet" href='./assets/css/style.css'>
     <!-- Added link to the jQuery -->
@@ -18,9 +18,9 @@
 
     <div class='name'>
         <h5>My Toadally Awesome Trivia Game!</h5>
-        <p>
+        <!-- <p>Time Remaining:
             <bold><span id="timer"></span></bold>
-        </p>
+        </p> -->
 
         <div id="quiz"></div>
         <button id="submit">Get Results</button>
